--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,6 @@
 [user]
 	name = Linus Fischer
 	email = mail@linus-fischer.de
+
+[alias]
+kraken = !"/Applications/GitKraken.app/Contents/MacOS/GitKraken -p $(pwd)"
