--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,11 @@
 [user]
 	name = Linus Fischer
 	email = mail@linus-fischer.de
+	signingkey = 213D6047023A39A9
 
 [alias]
 kraken = !"/Applications/GitKraken.app/Contents/MacOS/GitKraken -p $(pwd)"
+[core]
+	autocrlf = input
+[commit]
+	gpgsign = true
